--- a/main.html
+++ b/main.html
@@ -4,10 +4,54 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<form action="" method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name" required >
+		
+		<label for="email">Email</label>
+		<input type="email" id="email" placeholder="Email" required >
+		
+		<label for="g" >Gender</label>
+		<input type="radio" id="gender_m" name="g" checked>Male</input>
+		<input type="radio" id="gender_f" name="g">Female</input>
+		
+		<label for="car_brands">Car Brands</label>
+		<select id="car_brands" >
+			<option selected >--Please choose an option--</option>
+			<option>BMW</option>
+			<option>YAMAHA</option>
+			<option>HONDA</option>
+		</select>
+		
+		<label for="age">Age</label>
+		<input type="number" id="age" placeholder="Age" required>
+		
+		<label for="dob">DOB</label>
+		<input type="date" id="dob"  required>
+		
+		<label for="tel">Phone Number</label>
+		<input type="tel" id="tel"  placeholder="xxx-xxx-xxxx">
+		
+		<label for="tel">Password</label>
+		<input type="password" id="password"  placeholder="Password" required>
+		
+		<label for="tel">I agree to the TOS</label>
+		<input type="checkbox" id="tos"  required>
+
+		<input type="submit" value="Submit">
+		
+		
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
