--- a/main.html
+++ b/main.html
@@ -14,38 +14,63 @@
 	<!-- the entire body must be written by student -->
 
 	<form action="" method="post">
-		<label for="name">Name</label>
-		<input type="text" id="name" placeholder="Name" required >
+		<div>
+			<label for="name">Name</label>
+			<input type="text" id="name" placeholder="Name" required >
+		</div>
+		<div>
+			<label for="email">Email</label>
+		    <input type="email" id="email" placeholder="Email" required >
+		</div>
+
+		<div>
+			<label for="g" >Gender</label>
+			<input  type="radio" id="gender_m" name="g" checked>Male</input>
+			<input  type="radio" id="gender_f" name="g">Female</input>
+		</div>
+
+		<div>
+			<label for="car_brands">Car Brands</label>
+			<select id="car_brands" >
+				<option selected >--Please choose an option--</option>
+				<option>BMW</option>
+				<option>YAMAHA</option>
+				<option>HONDA</option>
+			</select>
+		</div>
 		
-		<label for="email">Email</label>
-		<input type="email" id="email" placeholder="Email" required >
+		<div>
+			<label for="age">Age</label>
+			<input type="number" id="age" placeholder="Age" required>
+		</div>
+		<div>
+			<label for="dob">DOB</label>
+			<input type="date" id="dob"  required>
+		</div>
+		<div>
+			<label for="tel">Phone Number</label>
+			<input type="tel" id="tel"  placeholder="xxx-xxx-xxxx">
+		</div>
+		<div>
+			<label for="tel">Password</label>
+			<input type="password" id="password"  placeholder="Password" required>
+		</div>
+		<div>
+			<label for="tel">I agree to the TOS</label>
+			<input type="checkbox" id="tos"  required>
+		</div>
 		
-		<label for="g" >Gender</label>
-		<input type="radio" id="gender_m" name="g" checked>Male</input>
-		<input type="radio" id="gender_f" name="g">Female</input>
 		
-		<label for="car_brands">Car Brands</label>
-		<select id="car_brands" >
-			<option selected >--Please choose an option--</option>
-			<option>BMW</option>
-			<option>YAMAHA</option>
-			<option>HONDA</option>
-		</select>
 		
-		<label for="age">Age</label>
-		<input type="number" id="age" placeholder="Age" required>
 		
-		<label for="dob">DOB</label>
-		<input type="date" id="dob"  required>
 		
-		<label for="tel">Phone Number</label>
-		<input type="tel" id="tel"  placeholder="xxx-xxx-xxxx">
 		
-		<label for="tel">Password</label>
-		<input type="password" id="password"  placeholder="Password" required>
 		
-		<label for="tel">I agree to the TOS</label>
-		<input type="checkbox" id="tos"  required>
+		
+		
+		
+		
+		
 
 		<input type="submit" value="Submit">
 		
