--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<form action="" method="post">
+	<form method="post">
 		<div>
 			<label for="name">Name</label>
 			<input type="text" id="name" placeholder="Name" required >
@@ -31,7 +31,7 @@
 
 		<div>
 			<label for="car_brands">Car Brands</label>
-			<select id="car_brands" >
+			<select id="car_brands" required >
 				<option selected >--Please choose an option--</option>
 				<option>BMW</option>
 				<option>YAMAHA</option>
